# hackathon-challenge

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt
app/: __init__.py  models.py  routes.py
app/views/: analyze_video.py  get_video_files.py  open_ended_analysis.py  serach_video.py  upload_video_view.py  video_status.py  video_summary.py
instance/: database.db
migrations/versions/: 056f1bdc02dd_first_migrations.py
